# learn-qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp  main_window.cpp  main_window.h
